--- a/ActionsTests.xcodeproj/xcshareddata/xcschemes/ActionsTestsTests.xcscheme
+++ b/ActionsTests.xcodeproj/xcshareddata/xcschemes/ActionsTestsTests.xcscheme
@@ -37,6 +37,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B92FF3BF2D2910A80065F3C0"
+            BuildableName = "ActionsTests.app"
+            BlueprintName = "ActionsTests"
+            ReferencedContainer = "container:ActionsTests.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -44,6 +54,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B92FF3BF2D2910A80065F3C0"
+            BuildableName = "ActionsTests.app"
+            BlueprintName = "ActionsTests"
+            ReferencedContainer = "container:ActionsTests.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
