--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -1,22 +1,34 @@
-name: iOS Build & Test
-
+name: Build and Test iOS App
 
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
 
 jobs:
-  build-and-test:
+  build:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v3
+    - name: Checkout source code
+      uses: actions/checkout@v3
 
-      - name: Build and Test
-        run: xcodebuild test -project ActionsTests.xcodeproj -scheme ActionsTests -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0'
+    - name: Set up Xcode
+      run: |
+        echo "${{ secrets.APPLE_CERTIFICATE }}" | base64 --decode > certificate.p12
+        echo "${{ secrets.PROVISIONING_PROFILE }}" | base64 --decode > profile.mobileprovision
+        security import certificate.p12 -P "$APPLE_DEVELOPER_PASSWORD" -T /usr/bin/codesign
+        mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+        mv profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
 
+    - name: Install dependencies
+      run: pod install # Если используете CocoaPods, иначе пропустите этот шаг.
+
+    - name: Build and Test
+      run: |
+        xcodebuild test \
+          -project ActionsTests.xcodeproj \
+          -scheme ActionsTests \
+          -destination 'platform=iOS Simulator,name=iPhone 14,OS=16.0' \
+          -allowProvisioningUpdates
